2006-08-17  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Use gnome-2-14 branch for gnome-system-tools.

2006-08-15  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: We should concentrate on epiphany-extesions
	HEAD branch.

2006-08-14  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected Evince POT name.

2006-08-12  Tommi Vainikainen  <thv@iki.fi>

	* translation-status.xml: Fixed dasher branch for GNOME 2.16 as
	per http://mail.gnome.org/archives/desktop-devel-list/2006-July/msg00821.html.

2006-08-12  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected Evince POT name.

2006-08-07  Todd Kulesza  <todd@dropline.net>

	* translation-status.xml: Drivel development is continuing
	on CVS HEAD.
	
2006-08-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added atomato to extras.

2006-08-06  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnome-pim has been moved to archive.

2006-08-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: more modules are moved to archive.

2006-08-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: several proposed modules are accepted.

2006-08-03  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnome-app-install, nofier, update-manager,
	red-carpet have been moved to archive.

2006-08-01  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: uf-view and optimystic has been moved
	to archive.

2006-07-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2006-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: According to discussion on gnome-i18n,
	ekiga will continue to use gnome-2-14 branch for GNOME 2.16.	

2006-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel has been branched.

2006-07-19  Christian Rose  <menthos@menthos.com>
