@@ -1040,7 +1040,7 @@
       <component name="glib" dir="glib" group="developer-libs">
         <podir dir="po"/>
         <potname name="glib20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="glib-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1585,7 +1585,7 @@
       <component name="gnome-power-manager" dir="gnome-power-manager" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-power-manager.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-16"/>
         <regenerate/>
         <download/>
       </component>
@@ -2025,14 +2025,14 @@
       <component name="gtk+" dir="gtk+" group="developer-libs">
         <podir dir="po"/>
         <potname name="gtk20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gtk-2-10"/>
         <regenerate/>
         <download/>
       </component>
       <component name="gtk+-properties" dir="gtk+" group="developer-libs">
         <podir dir="po-properties"/>
         <potname name="gtk20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gtk-2-10"/>
         <regenerate/>
       </component>
     </version>
