@@ -1,3 +1,7 @@
+2006-08-23  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: Branch g-p-m, glib, gtk+.
+
 2006-08-17  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: Use gnome-2-14 branch for gnome-system-tools.
